--- a/MyDocs/SecondSubView/SecondSubView.storyboard
+++ b/MyDocs/SecondSubView/SecondSubView.storyboard
@@ -57,6 +57,7 @@
                                 </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="gray" title="Add">
+                                    <backgroundConfiguration key="background" cornerRadius="14"/>
                                     <fontDescription key="titleFontDescription" type="boldSystem" pointSize="20"/>
                                     <color key="baseForegroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </buttonConfiguration>
