--- a/MyDocs/Main/Base.lproj/Main.storyboard
+++ b/MyDocs/Main/Base.lproj/Main.storyboard
@@ -21,16 +21,8 @@
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                             </tableView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IJl-e5-YK8">
-                                <rect key="frame" x="344" y="48" width="30" height="36"/>
-                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal" title=""/>
-                                <connections>
-                                    <action selector="addButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="PAH-yV-Yb0"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K9T-OB-9q1">
-                                <rect key="frame" x="16" y="49" width="80" height="36"/>
+                                <rect key="frame" x="16" y="48" width="80" height="36"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal" title=""/>
@@ -44,9 +36,17 @@
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="140" id="33U-6M-1Jt"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="26"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" systemColor="tintColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IJl-e5-YK8">
+                                <rect key="frame" x="344" y="48" width="30" height="36"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title=""/>
+                                <connections>
+                                    <action selector="addButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="PAH-yV-Yb0"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -54,8 +54,8 @@
                             <constraint firstItem="BvT-6d-nkF" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="3mj-om-v1f"/>
                             <constraint firstItem="BvT-6d-nkF" firstAttribute="top" secondItem="qrh-4E-Q2M" secondAttribute="bottom" constant="16.666666666666671" id="Lha-Xf-hMc"/>
                             <constraint firstItem="IJl-e5-YK8" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="OTd-7V-nWi"/>
-                            <constraint firstItem="K9T-OB-9q1" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="5" id="QHJ-6B-cSr"/>
-                            <constraint firstItem="BvT-6d-nkF" firstAttribute="top" secondItem="K9T-OB-9q1" secondAttribute="bottom" constant="7" id="Te6-U6-wMl"/>
+                            <constraint firstItem="K9T-OB-9q1" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="4" id="QHJ-6B-cSr"/>
+                            <constraint firstItem="BvT-6d-nkF" firstAttribute="top" secondItem="K9T-OB-9q1" secondAttribute="bottom" constant="8" id="Te6-U6-wMl"/>
                             <constraint firstItem="IJl-e5-YK8" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="qrh-4E-Q2M" secondAttribute="trailing" id="UbX-bX-pT9"/>
                             <constraint firstItem="qrh-4E-Q2M" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="bSw-AX-5CJ"/>
                             <constraint firstItem="BvT-6d-nkF" firstAttribute="top" secondItem="IJl-e5-YK8" secondAttribute="bottom" constant="8" id="lz7-mF-okh"/>
@@ -83,6 +83,9 @@
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="tintColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
