--- a/MyDocs/ObjectView/ObjectViewController.storyboard
+++ b/MyDocs/ObjectView/ObjectViewController.storyboard
@@ -16,48 +16,57 @@
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0j9-z9-ZNn">
-                                <rect key="frame" x="340" y="44" width="30" height="30"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal" title="Add">
-                                    <color key="titleColor" red="0.13468672079999999" green="0.13468672079999999" blue="0.13468672079999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                </state>
-                                <connections>
-                                    <action selector="addDocButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="BVc-z6-F4m"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HBk-p6-O8S">
-                                <rect key="frame" x="20" y="44" width="37" height="30"/>
+                                <rect key="frame" x="16" y="54.000000000000007" width="30" height="31.333333333333336"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal" title="Back">
+                                <state key="normal">
                                     <color key="titleColor" red="0.13468672079999999" green="0.13468672079999999" blue="0.13468672079999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </state>
                                 <connections>
                                     <action selector="backButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="RWt-7Y-zx9"/>
                                 </connections>
                             </button>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="248" estimatedRowHeight="-1" sectionHeaderHeight="28" estimatedSectionHeaderHeight="-1" sectionFooterHeight="28" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="lqE-UB-AVi">
-                                <rect key="frame" x="0.0" y="91" width="390" height="719"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="248" estimatedRowHeight="-1" sectionHeaderHeight="5" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="lqE-UB-AVi">
+                                <rect key="frame" x="0.0" y="92" width="390" height="718"/>
                                 <sections/>
                             </tableView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j1U-4v-zj4">
-                                <rect key="frame" x="125" y="44" width="140" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j1U-4v-zj4">
+                                <rect key="frame" x="125" y="44" width="140" height="31.333333333333329"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="140" id="jOn-ge-pSp"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="26"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0j9-z9-ZNn">
+                                <rect key="frame" x="344" y="54" width="30" height="31.333333333333329"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal">
+                                    <color key="titleColor" red="0.13468672079999999" green="0.13468672079999999" blue="0.13468672079999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                </state>
+                                <connections>
+                                    <action selector="addDocButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="BVc-z6-F4m"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="0j9-z9-ZNn" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="E7g-yF-idf"/>
-                            <constraint firstItem="HBk-p6-O8S" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="WZ5-g5-CkT"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="0j9-z9-ZNn" secondAttribute="trailing" constant="20" id="Xoo-lO-O8g"/>
-                            <constraint firstItem="HBk-p6-O8S" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="rZ9-Fm-Nub"/>
+                            <constraint firstItem="lqE-UB-AVi" firstAttribute="bottom" secondItem="vDu-zF-Fre" secondAttribute="bottom" id="8BS-uI-wYp"/>
+                            <constraint firstItem="0j9-z9-ZNn" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="10" id="E7g-yF-idf"/>
+                            <constraint firstItem="j1U-4v-zj4" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="Hyt-4y-EPf"/>
+                            <constraint firstItem="lqE-UB-AVi" firstAttribute="top" secondItem="j1U-4v-zj4" secondAttribute="bottom" constant="16.666666666666671" id="S9d-zh-pOV"/>
+                            <constraint firstItem="HBk-p6-O8S" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="16" id="WZ5-g5-CkT"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="0j9-z9-ZNn" secondAttribute="trailing" constant="16" id="Xoo-lO-O8g"/>
+                            <constraint firstItem="j1U-4v-zj4" firstAttribute="centerY" secondItem="0j9-z9-ZNn" secondAttribute="centerY" constant="-9.9999999999999929" id="eVE-7d-qCg"/>
+                            <constraint firstItem="j1U-4v-zj4" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="k5J-vr-J9v"/>
+                            <constraint firstItem="lqE-UB-AVi" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="l5u-sx-KXr"/>
+                            <constraint firstItem="j1U-4v-zj4" firstAttribute="centerY" secondItem="HBk-p6-O8S" secondAttribute="centerY" constant="-9.9999999999999929" id="p6i-ay-51I"/>
+                            <constraint firstItem="HBk-p6-O8S" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="10" id="rZ9-Fm-Nub"/>
+                            <constraint firstItem="j1U-4v-zj4" firstAttribute="centerX" secondItem="lqE-UB-AVi" secondAttribute="centerX" id="wVT-pi-tuY"/>
                         </constraints>
                     </view>
                     <connections>
