Added realization massive of objects secondCategories to DB

--- a/MyDocs/ObjectView/ObjectViewController.storyboard
+++ b/MyDocs/ObjectView/ObjectViewController.storyboard
@@ -41,7 +41,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0j9-z9-ZNn">
-                                <rect key="frame" x="344" y="54" width="30" height="31.333333333333329"/>
+                                <rect key="frame" x="344" y="54.000000000000007" width="30" height="31.333333333333336"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal">
