--- a/MyDocs/FirstCategories/FirstCategoriesCells/NewTableViewCell.xib
+++ b/MyDocs/FirstCategories/FirstCategoriesCells/NewTableViewCell.xib
@@ -10,31 +10,31 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="54" id="KGk-i7-Jjw" customClass="NewTableViewCell" customModule="MyDocs" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="390" height="54"/>
+            <rect key="frame" x="0.0" y="0.0" width="390" height="64"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="390" height="54"/>
+                <rect key="frame" x="0.0" y="0.0" width="390" height="64"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AzR-SC-ZJ1">
-                        <rect key="frame" x="16" y="10" width="78.5" height="39"/>
+                        <rect key="frame" x="16" y="10" width="78.5" height="49"/>
                         <fontDescription key="fontDescription" name="Symbol" family="Symbol" pointSize="32"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Klt-UC-26V">
-                        <rect key="frame" x="118.5" y="10" width="63" height="39"/>
-                        <fontDescription key="fontDescription" name="NotoSansMyanmar-Bold" family="Noto Sans Myanmar" pointSize="24"/>
+                        <rect key="frame" x="109" y="7" width="66.5" height="49"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="26"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="Klt-UC-26V" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="3ty-dr-xzW"/>
+                    <constraint firstItem="Klt-UC-26V" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="7" id="3ty-dr-xzW"/>
                     <constraint firstItem="AzR-SC-ZJ1" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="G69-tA-JGg"/>
-                    <constraint firstAttribute="bottom" secondItem="Klt-UC-26V" secondAttribute="bottom" constant="5" id="Hri-OK-p8l"/>
+                    <constraint firstAttribute="bottom" secondItem="Klt-UC-26V" secondAttribute="bottom" constant="8" id="Hri-OK-p8l"/>
                     <constraint firstAttribute="bottom" secondItem="AzR-SC-ZJ1" secondAttribute="bottom" constant="5" id="SYw-HA-3y3"/>
-                    <constraint firstItem="Klt-UC-26V" firstAttribute="leading" secondItem="AzR-SC-ZJ1" secondAttribute="trailing" constant="24" id="f11-ms-QD4"/>
+                    <constraint firstItem="Klt-UC-26V" firstAttribute="leading" secondItem="AzR-SC-ZJ1" secondAttribute="trailing" constant="14.5" id="f11-ms-QD4"/>
                     <constraint firstItem="AzR-SC-ZJ1" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="z8F-wL-rc7"/>
                 </constraints>
             </tableViewCellContentView>
