--- a/MyDocs/FirstCategories/SecondCategories/ObjectViewController.storyboard
+++ b/MyDocs/FirstCategories/SecondCategories/ObjectViewController.storyboard
@@ -17,10 +17,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HBk-p6-O8S">
-                                <rect key="frame" x="16" y="54.000000000000007" width="30" height="31.333333333333336"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <rect key="frame" x="16" y="54" width="84" height="30"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal">
+                                <state key="normal" title="Back">
                                     <color key="titleColor" red="0.13468672079999999" green="0.13468672079999999" blue="0.13468672079999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </state>
                                 <connections>
@@ -28,20 +28,20 @@
                                 </connections>
                             </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="248" estimatedRowHeight="-1" sectionHeaderHeight="5" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="lqE-UB-AVi">
-                                <rect key="frame" x="0.0" y="92" width="390" height="718"/>
+                                <rect key="frame" x="0.0" y="90.666666666666686" width="390" height="719.33333333333326"/>
                                 <sections/>
                             </tableView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j1U-4v-zj4">
-                                <rect key="frame" x="125" y="44" width="140" height="31.333333333333329"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j1U-4v-zj4">
+                                <rect key="frame" x="125" y="44" width="140" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="140" id="jOn-ge-pSp"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="26"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" systemColor="tintColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0j9-z9-ZNn">
-                                <rect key="frame" x="344" y="54.000000000000007" width="30" height="31.333333333333336"/>
+                                <rect key="frame" x="344" y="54" width="30" height="30"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal">
@@ -55,17 +55,19 @@
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="HBk-p6-O8S" firstAttribute="firstBaseline" secondItem="0j9-z9-ZNn" secondAttribute="firstBaseline" id="5MK-Fm-i1Z"/>
                             <constraint firstItem="lqE-UB-AVi" firstAttribute="bottom" secondItem="vDu-zF-Fre" secondAttribute="bottom" id="8BS-uI-wYp"/>
                             <constraint firstItem="0j9-z9-ZNn" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="10" id="E7g-yF-idf"/>
                             <constraint firstItem="j1U-4v-zj4" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="Hyt-4y-EPf"/>
+                            <constraint firstItem="HBk-p6-O8S" firstAttribute="baseline" secondItem="0j9-z9-ZNn" secondAttribute="baseline" id="KYJ-86-Bpc"/>
+                            <constraint firstItem="j1U-4v-zj4" firstAttribute="leading" secondItem="HBk-p6-O8S" secondAttribute="trailing" constant="25" id="OtW-au-ZjQ"/>
                             <constraint firstItem="lqE-UB-AVi" firstAttribute="top" secondItem="j1U-4v-zj4" secondAttribute="bottom" constant="16.666666666666671" id="S9d-zh-pOV"/>
-                            <constraint firstItem="HBk-p6-O8S" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="16" id="WZ5-g5-CkT"/>
+                            <constraint firstItem="HBk-p6-O8S" firstAttribute="leading" secondItem="5EZ-qb-Rvc" secondAttribute="leadingMargin" id="WeA-Ak-PqJ"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="0j9-z9-ZNn" secondAttribute="trailing" constant="16" id="Xoo-lO-O8g"/>
+                            <constraint firstItem="HBk-p6-O8S" firstAttribute="top" secondItem="0j9-z9-ZNn" secondAttribute="top" id="b1v-Yo-59v"/>
                             <constraint firstItem="j1U-4v-zj4" firstAttribute="centerY" secondItem="0j9-z9-ZNn" secondAttribute="centerY" constant="-9.9999999999999929" id="eVE-7d-qCg"/>
                             <constraint firstItem="j1U-4v-zj4" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="k5J-vr-J9v"/>
                             <constraint firstItem="lqE-UB-AVi" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="l5u-sx-KXr"/>
-                            <constraint firstItem="j1U-4v-zj4" firstAttribute="centerY" secondItem="HBk-p6-O8S" secondAttribute="centerY" constant="-9.9999999999999929" id="p6i-ay-51I"/>
-                            <constraint firstItem="HBk-p6-O8S" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="10" id="rZ9-Fm-Nub"/>
                             <constraint firstItem="j1U-4v-zj4" firstAttribute="centerX" secondItem="lqE-UB-AVi" secondAttribute="centerX" id="wVT-pi-tuY"/>
                         </constraints>
                     </view>
@@ -84,6 +86,9 @@
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="tintColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
