--- a/MyDocs/FirstCategories/SecondCategories/SecondCategoriesCells/CellOfTableView/CellForDocsTableView.xib
+++ b/MyDocs/FirstCategories/SecondCategories/SecondCategoriesCells/CellOfTableView/CellForDocsTableView.xib
@@ -36,17 +36,15 @@
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Fa-xF-UHZ">
                         <rect key="frame" x="20" y="15" width="128" height="32"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="26"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ysE-Q4-mQj">
-                        <rect key="frame" x="294" y="15" width="96" height="32"/>
+                        <rect key="frame" x="342" y="19" width="28" height="28"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <state key="normal" title="Button"/>
-                        <buttonConfiguration key="configuration" style="plain" title="Photo">
-                            <fontDescription key="titleFontDescription" type="boldSystem" pointSize="16"/>
-                        </buttonConfiguration>
+                        <buttonConfiguration key="configuration" style="plain"/>
                         <connections>
                             <action selector="addButtonTapped" destination="KGk-i7-Jjw" eventType="touchUpInside" id="V7D-0b-ZgD"/>
                             <action selector="addButtonTapped:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="PbU-4N-6YM"/>
@@ -55,6 +53,7 @@
                 </subviews>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
             <connections>
                 <outlet property="addButtonTapped" destination="ysE-Q4-mQj" id="49a-cw-Z1y"/>
                 <outlet property="collectionView" destination="b7H-dQ-KKs" id="8oi-dc-ebA"/>
